<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.febin.group21_hw08.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">


            <Button
                android:id="@+id/buttonSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="clickSetCurrentCity"
                android:text="@string/buttonCurrent"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/textViewNotSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="20dp"
                android:text="@string/currentCityMessage"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBarLoad"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_gravity="center|bottom" />

            <RelativeLayout
                android:id="@+id/relativeLayoutFrameOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false">

                <TextView
                    android:id="@+id/textViewCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="TextView"
                    android:textAllCaps="false"
                    android:textColor="@color/action"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewCityName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="11dp"
                    android:text="TextView" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="75dp"
                    android:layout_below="@+id/textViewWeather"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

                <TextView
                    android:id="@+id/textViewTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textViewUpdated"
                    android:layout_centerHorizontal="true"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textViewUpdated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="TextView" />

            </RelativeLayout>
        </FrameLayout>

        <EditText
            android:id="@+id/editTextCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/frameLayout"
            android:ems="10"
            android:hint="@string/cityName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/countryName"
            android:inputType="textPersonName"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:onClick="clickSearchCity"
            android:text="@string/buttonSearch"
            android:textAllCaps="false"
            android:layout_below="@+id/editTextCountry"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button2"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLayoutDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewSavedMessaage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/messsage1" />

                <TextView
                    android:id="@+id/textViewSavedMessaage1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/messsage2"
                    android:textAlignment="center" />

                <LinearLayout
                    android:id="@+id/linearlayoutList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Saved"
                        android:textSize="16sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:longClickable="true"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
